# idoji

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: coverage.yaml  lint.yaml  tests.yaml
src/: idoji.py
tests/: conftest.py  test_idoji.py
