[metadata]
name = idoji
version = 1.0.1
author = SteveCharleston
author_email = steven@schalhorn.org
description = Generate unique identifiers only using emojis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SteveCharleston/idoji
project_urls =
    Bug Tracker = https://github.com/SteveCharleston/idoji/issues
license = GPLv3
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
py_modules = idoji
package_dir =
    = src
packages: find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    idoji = idoji:__main
